[package]
name = "glui"
version = "0.1.0"
authors = ["Frontier789 <fr0nt13r789@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.14", features = ["full", "extra-traits", "derive"]}
quote = "1.0.2"

[lib]
proc-macro = true
